[PE] Fix background-attachment:fixed invalidation in some cases

We should always invalidate background-attachment:fixed background when
the layout view's background rect changes. Previously we expected
incremental invalidation but that doesn't work for fixed attachment
backgrounds which depend on the viewport background size instead of
the size of the object's visual rect.

Bug: 890549
Change-Id: I447956b4f8c06e9c94fa9352389979e8e6ced22d
Reviewed-on: https://chromium-review.googlesource.com/c/1418496
Reviewed-by: Philip Rogers <pdr@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#623930}
Former-commit-id: 0567c6cb3ec150f8615e9b719217a9708d4fa1a1